--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "piedra-papel-tijera-app.github.io",
+  "name": "piedra-papel-tijera-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
